additional corrections to animations/css stylings; still have yet to get all of the aos.js functions in working order; only the three web icons fade-in sequentially highlighting that the error is not with the aos.js library

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Kyle Cox</title>
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Butcherman&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bangers&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -50,10 +50,10 @@
 
     <section class="about" id="about">
         <div class="container">
-            <div class="profile-img">
-                <img src="assets/images/profile.jpg" alt="profile">
+            <div class="profile-img" data-aos="fade-right" data-aos-delay="300">
+                <img src="assets/images/profile2.jpg" alt="profile">
             </div>
-            <div class="about-details">
+            <div class="about-details" data-aos="fade-left" data-aos-delay="600">
                 <div class="about-heading">
                     <h1>About</h1>
                     <h6>Myself</h6>
@@ -76,16 +76,15 @@
                                 <i class="fab fa-facebook-square"></i>
                             </a>
                             <a href="#" class="icon-link">
-                                <i class="fab fa-twitter-square"></i>
+                                <i class="fab fa-linkedin"></i>
                             </a>
                             <a href="#" class="icon-link">
-                                <i class="fab fa-dribbble-square"></i>
+                                <i class="fab fa-github-square"></i>
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
-
         </div>
     </section>
 
@@ -96,7 +95,7 @@
                 <h6>What I can do for you: </h6>
             </div>
             <div class="my-skills">
-                <div class="skill">
+                <div class="skill" data-aos="fade-in" data-aos-delay="300">
                     <div class="icon-container">
                         <i class="fas fa-layer-group"></i>
                     </div>
@@ -108,7 +107,7 @@
                         difficultas est nobis.
                     </p>
                 </div>
-                <div class="skill">
+                <div class="skill" data-aos="fade-in" data-aos-delay="600">
                     <div class="icon-container">
                         <i class="fas fa-code"></i>
                     </div>
@@ -120,7 +119,7 @@
                         difficultas est nobis.
                     </p>
                 </div>
-                <div class="skill">
+                <div class="skill" data-aos="fade-in" data-aos-delay="900">
                     <div class="icon-container">
                         <i class="fas fa-chart-bar"></i>
                     </div>
@@ -143,43 +142,46 @@
                 <h6>View recent projects</h6>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right">
-                    <img src="images/portitem1.jpeg" alt="">
+                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
+                    <img src="assets/images/bass.jpg" alt="bass">
                 </div>
             </div>
-            <div class="portfolio-description">
+            <div class="portfolio-description" data-aos="fade-left" data-aos-delay="600">
                 <h6>Web Development</h6>
                 <h1>Blog Website</h1>
-                <p> Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
+                <p>
+                    Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
                     difficultas est nobis.
                     Respice ... Sentio sicut
                 </p>
                 <a href="#" class="cta">View Details</a>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-description has-margin-right">
+                <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="900">
                     <h6>Web Design</h6>
                     <h1>Product Layout</h1>
-                    <p> Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
+                    <p>
+                        Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
                         difficultas est nobis.
                         Respice ... Sentio sicut
                     </p>
                     <a href="#" class="cta">View Details</a>
                 </div>
-                <div class="portfolio-img">
-                    <img src="images/portitem2.jpeg" alt="">
+                <div class="portfolio-img" data-aos="fade-left" data-aos-delay="1200">
+                    <img src="assets/images/ninten.png" alt="">
                 </div>
             </div>
 
             <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right">
-                    <img src="images/portitem3.jpeg" alt="">
+                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="1500">
+                    <img src="assets/images/gems.jpg" alt="">
                 </div>
             </div>
-            <div class="portfolio-description">
+            <div class="portfolio-description" data-aos="fade-left" data-aos-delay="1800">
                 <h6>Web Design</h6>
                 <h1>Product Sketch</h1>
-                <p> Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
+                <p>
+                    Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
                     difficultas est nobis.
                     Respice ... Sentio sicut
                 </p>
@@ -194,17 +196,17 @@
                 <h1>Work Experience</h1>
                 <h6>Past and current jobs</h6>
             </div>
-            <div class="timeline">
+            <div class="timeline" data-aos="fade-down" data-aos-delay="300">
                 <ul>
-                    <li class="date"> data-date="2011 - Present"
-                        <h1>Google</h1>
-                        <p>
-                            Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
-                            difficultas est nobis.
-                            Respice ... Sentio sicut
-                        </p>
+                    <li class="date" data-date="2011 - Present">
+                    <h1>Google</h1>
+                    <p>
+                        Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
+                        difficultas est nobis.
+                        Respice ... Sentio sicut
+                    </p>
                     </li>
-                    <li class="date"> data-date="2008 - 2011"
+                    <li class="date" data-date="2008 - 2011">
                         <h1>Facebook</h1>
                         <p>
                             Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
@@ -212,7 +214,7 @@
                             Respice ... Sentio sicut
                         </p>
                     </li>
-                    <li class="date"> data-date="2002 - 2007"
+                    <li class="date" data-date="2002 - 2007">
                         <h1>Microsoft</h1>
                         <p>
                             Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
@@ -231,7 +233,7 @@
                 <h1>Contact</h1>
                 <h6>Let's work together</h6>
             </div>
-            <form action="">
+            <form action="" data-aos="fade-up" data-aos-delay="300">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" placeholder="Enter your name..." required>
                 <label for="email">Email:</label>
@@ -257,9 +259,9 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://kit.fontawesome.com/5b6d4d0eea.js"></script>
     <script src="assets/javascript/app.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 
 </html>
