finally got the aos.js functioning properly; still need to change css stylings to complete the portfolio

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Kyle Cox</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Bangers&display=swap" rel="stylesheet">
-
+    <link rel=“stylesheet” href=“https://use.fontawesome.com/releases/v5.7.2/css/all.css”
+        integrity=“sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr” crossorigin=“anonymous”>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -50,10 +49,10 @@
 
     <section class="about" id="about">
         <div class="container">
-            <div class="profile-img" data-aos="fade-right" data-aos-delay="300">
+            <div class="profile-img" data-aos="fade-in" data-aos-delay="300">
                 <img src="assets/images/profile2.jpg" alt="profile">
             </div>
-            <div class="about-details" data-aos="fade-left" data-aos-delay="600">
+            <div class="about-details" data-aos="fade-in" data-aos-delay="600">
                 <div class="about-heading">
                     <h1>About</h1>
                     <h6>Myself</h6>
@@ -72,13 +71,13 @@
                 <div class="social-media">
                     <ul class="nav-list">
                         <li>
-                            <a href="#" class="icon-link">
+                            <a target="blank" href="#" class="icon-link">
                                 <i class="fab fa-facebook-square"></i>
                             </a>
-                            <a href="#" class="icon-link">
+                            <a target="blank" href="https://www.linkedin.com/in/kyle-cox-812757113" class="icon-link">
                                 <i class="fab fa-linkedin"></i>
                             </a>
-                            <a href="#" class="icon-link">
+                            <a target="blank" href="https://github.com/kylecox213" class="icon-link">
                                 <i class="fab fa-github-square"></i>
                             </a>
                         </li>
@@ -95,7 +94,7 @@
                 <h6>What I can do for you: </h6>
             </div>
             <div class="my-skills">
-                <div class="skill" data-aos="fade-in" data-aos-delay="300">
+                <div class="skill" data-aos="flip-left" data-aos-delay="300">
                     <div class="icon-container">
                         <i class="fas fa-layer-group"></i>
                     </div>
@@ -107,7 +106,7 @@
                         difficultas est nobis.
                     </p>
                 </div>
-                <div class="skill" data-aos="fade-in" data-aos-delay="600">
+                <div class="skill" data-aos="fade-left" data-aos-delay="600">
                     <div class="icon-container">
                         <i class="fas fa-code"></i>
                     </div>
@@ -119,7 +118,7 @@
                         difficultas est nobis.
                     </p>
                 </div>
-                <div class="skill" data-aos="fade-in" data-aos-delay="900">
+                <div class="skill" data-aos="fade-left" data-aos-delay="900">
                     <div class="icon-container">
                         <i class="fas fa-chart-bar"></i>
                     </div>
@@ -199,12 +198,12 @@
             <div class="timeline" data-aos="fade-down" data-aos-delay="300">
                 <ul>
                     <li class="date" data-date="2011 - Present">
-                    <h1>Google</h1>
-                    <p>
-                        Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
-                        difficultas est nobis.
-                        Respice ... Sentio sicut
-                    </p>
+                        <h1>Google</h1>
+                        <p>
+                            Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
+                            difficultas est nobis.
+                            Respice ... Sentio sicut
+                        </p>
                     </li>
                     <li class="date" data-date="2008 - 2011">
                         <h1>Facebook</h1>
