fixed more issues with css stylings

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         difficultas est nobis.
                     </p>
                 </div>
-                <div class="skill" data-aos="fade-left" data-aos-delay="600">
+                <div class="skill" data-aos="flip-left" data-aos-delay="600">
                     <div class="icon-container">
                         <i class="fas fa-code"></i>
                     </div>
@@ -118,7 +118,7 @@
                         difficultas est nobis.
                     </p>
                 </div>
-                <div class="skill" data-aos="fade-left" data-aos-delay="900">
+                <div class="skill" data-aos="flip-left" data-aos-delay="900">
                     <div class="icon-container">
                         <i class="fas fa-chart-bar"></i>
                     </div>
@@ -142,7 +142,7 @@
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
-                    <img src="assets/images/bass.jpg" alt="bass">
+                    <!-- <img src="assets/images/bass.jpg" alt="bass"> -->
                 </div>
             </div>
             <div class="portfolio-description" data-aos="fade-left" data-aos-delay="600">
@@ -167,13 +167,34 @@
                     <a href="#" class="cta">View Details</a>
                 </div>
                 <div class="portfolio-img" data-aos="fade-left" data-aos-delay="1200">
-                    <img src="assets/images/ninten.png" alt="">
+                    <a href="https://kylecox213.github.io/Nice-Bass/">
+                        <img src="assets/images/bass.jpg" alt="Largemouth Bass"></a>
+                </div>
+                <div class="portfolio-img" data-aos="fade-right" data-aos-delay="1200">
+                    <a href="https://kylecox213.github.io/unit-4-game/">
+                        <img src="assets/images/gems.jpg" alt="RPG Game"></a>
+                </div>
+                <div class="portfolio-img" data-aos="fade-left" data-aos-delay="1200">
+                    <a href="https://kylecox213.github.io/GIPHY-API/?">
+                        <img src="assets/images/ninten.png" alt="Giphy API"></a>
+                </div>
+                <div class="portfolio-img" data-aos="fade-right" data-aos-delay="1200">
+                    <a href="https://kylecox213.github.io/Psychic-Game/">
+                        <img src="assets/images/goblinball.png" alt="Psychic Game"></a>
+                </div>
+                <div class="portfolio-img" data-aos="fade-left" data-aos-delay="1200">
+                    <a href="https://kylecox213.github.io/Train-Scheduler/">
+                        <img src="assets/images/badtrain.jpg" alt="Train"></a>
+                </div>
+                <div class="portfolio-img" data-aos="fade-right" data-aos-delay="1200">
+                    <a href="https://kylecox213.github.io/Number-Guess-Game/">
+                        <img src="assets/images/randomnums.jpg" alt="Numbers"></a>
                 </div>
             </div>
 
             <div class="portfolio-item">
                 <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="1500">
-                    <img src="assets/images/gems.jpg" alt="">
+                    <!-- <img src="assets/images/gems.jpg" alt=""> -->
                 </div>
             </div>
             <div class="portfolio-description" data-aos="fade-left" data-aos-delay="1800">
