nearly all css stylings complete; added all completed project to portfolio section; added functional links to linkedIn, email, resume, gitHub;

--- a/index.html
+++ b/index.html
@@ -42,31 +42,29 @@
         </nav>
         <div class="landing-text">
             <h1>Kyle Cox
-                <h6>UI | UX Designer and Web Developer</h6>
+                <h6>Software Developer | Web Developer | Business Analyst</h6>
             </h1>
         </div>
     </header>
 
     <section class="about" id="about">
         <div class="container">
-            <div class="profile-img" data-aos="fade-in" data-aos-delay="300">
+            <div class="profile-img" data-aos="fade-right" data-aos-delay="300">
                 <img src="assets/images/profile2.jpg" alt="profile">
             </div>
-            <div class="about-details" data-aos="fade-in" data-aos-delay="600">
+            <div class="about-details" data-aos="fade-left" data-aos-delay="600">
                 <div class="about-heading">
                     <h1>About</h1>
                     <h6>Myself</h6>
                 </div>
                 <p>
-                    Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
-                    difficultas est nobis.
-                    Perdet eam batch nostri. Et delebis eam ac omnia opus est vestigium, ut possimus coques. Sin id,
-                    quod morte
-                    morieris. Locus non est peccatum. Nec apud hos. Respice ... Sentio sicut ego vobis exponam: sed vias
-                    breve iterum conabor. Fugere hoc maior difficultas est nobis.
-                    Perdet eam batch nostri. Et delebis eam ac omnia opus est vestigium, ut possimus coques. Sin id,
-                    quod morte
-                    morieris. Locus non est peccatum. Nec apud hos.
+                    I am married and have two lovely daughters. I am a graduate from Virginia Commonwealth University. I
+                    currently
+                    am a student at the University of Richmond. I am currently employed at Logistics Solutions Group as
+                    a
+                    software developer and business analyst. My hobbies include playing the drums, fishing, traveling,
+                    reading,
+                    collecting retro-videogames, coding and computer programming.
                 </p>
                 <div class="social-media">
                     <ul class="nav-list">
@@ -79,6 +77,10 @@
                             </a>
                             <a target="blank" href="https://github.com/kylecox213" class="icon-link">
                                 <i class="fab fa-github-square"></i>
+                            </a>
+                            <a target="blank" href="https://1drv.ms/b/s!Ah7GvE7bTMpCgZw07oa8yzxpSOvVNg"
+                                class="icon-link">
+                                <i class="fa fa-file-pdf-o"></i>
                             </a>
                         </li>
                     </ul>
@@ -100,34 +102,26 @@
                     </div>
                     <h1>Web Design</h1>
                     <p>
-                        Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
-                        difficultas est nobis.
-                        Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
-                        difficultas est nobis.
+                        Acquiring the skills to develop dynamic web pages utilizing cutting-edge tools and resources
                     </p>
                 </div>
                 <div class="skill" data-aos="flip-left" data-aos-delay="600">
                     <div class="icon-container">
                         <i class="fas fa-code"></i>
                     </div>
-                    <h1>Web Development</h1>
+                    <h1>Software Development</h1>
                     <p>
-                        Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
-                        difficultas est nobis.
-                        Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
-                        difficultas est nobis.
+                        Utilizing skills to design and develop front-end and back-end programs across multiple languages
+                        and platforms
                     </p>
                 </div>
                 <div class="skill" data-aos="flip-left" data-aos-delay="900">
                     <div class="icon-container">
                         <i class="fas fa-chart-bar"></i>
                     </div>
-                    <h1>Product Strategy</h1>
+                    <h1>Database</h1>
                     <p>
-                        Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
-                        difficultas est nobis.
-                        Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
-                        difficultas est nobis.
+                        Expanding the skills to utilize a variety of databases in accordance an application's needs
                     </p>
                 </div>
             </div>
@@ -141,17 +135,52 @@
                 <h6>View recent projects</h6>
             </div>
             <div class="portfolio-item">
+                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="300">
+                    <a href="https://kylecox213.github.io/Nice-Bass/">
+                        <img src="assets/images/bassapp.png" alt="bass"></a>
+                </div>
+            </div>
+            <div class="portfolio-item">
                 <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
-                    <!-- <img src="assets/images/bass.jpg" alt="bass"> -->
+                    <a href="https://kylecox213.github.io/unit-4-game/">
+                        <img src="assets/images/crystalgame.png" alt="crystal"></a>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="300">
+                    <a href="https://kylecox213.github.io/Trivia-Game/">
+                        <img src="assets/images/triviagame.png" alt="trivia"></a>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
+                    <a href="https://kylecox213.github.io/GIPHY-API/?">
+                        <img src="assets/images/nintendoapp.png" alt="giph"></a>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="300">
+                    <a href="https://kylecox213.github.io/Psychic-Game/">
+                        <img src="assets/images/psygame (1).png" alt="psychic"></a>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
+                    <a href="https://kylecox213.github.io/Number-Guess-Game/">
+                        <img src="assets/images/numbergame.png" alt="number"></a>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="300">
+                    <a href="https://kylecox213.github.io/Train-Scheduler/">
+                        <img src="assets/images/traingame.png" alt="train"></a>
                 </div>
             </div>
             <div class="portfolio-description" data-aos="fade-left" data-aos-delay="600">
-                <h6>Web Development</h6>
-                <h1>Blog Website</h1>
+                <h6>Software Development</h6>
+                <h1>COG Systems LLC</h1>
                 <p>
-                    Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
-                    difficultas est nobis.
-                    Respice ... Sentio sicut
+                    COG Systems website is currently under construction!
                 </p>
                 <a href="#" class="cta">View Details</a>
             </div>
@@ -160,9 +189,7 @@
                     <h6>Web Design</h6>
                     <h1>Product Layout</h1>
                     <p>
-                        Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
-                        difficultas est nobis.
-                        Respice ... Sentio sicut
+                        Product page is currently under construction!
                     </p>
                     <a href="#" class="cta">View Details</a>
                 </div>
@@ -194,16 +221,14 @@
 
             <div class="portfolio-item">
                 <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="1500">
-                    <!-- <img src="assets/images/gems.jpg" alt=""> -->
+                    <img src="assets/images/gems.jpg" alt="">
                 </div>
             </div>
             <div class="portfolio-description" data-aos="fade-left" data-aos-delay="1800">
                 <h6>Web Design</h6>
                 <h1>Product Sketch</h1>
                 <p>
-                    Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
-                    difficultas est nobis.
-                    Respice ... Sentio sicut
+                    Product Sketch page is currently under construction!
                 </p>
                 <a href="#" class="cta">View Details</a>
             </div>
@@ -218,28 +243,22 @@
             </div>
             <div class="timeline" data-aos="fade-down" data-aos-delay="300">
                 <ul>
-                    <li class="date" data-date="2011 - Present">
-                        <h1>Google</h1>
+                    <li class="date" data-date="Dec 18 - Present">
+                        <h1>COG Systems LLC</h1>
                         <p>
-                            Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
-                            difficultas est nobis.
-                            Respice ... Sentio sicut
+                            Lead Software Developer | Consultant
                         </p>
                     </li>
-                    <li class="date" data-date="2008 - 2011">
-                        <h1>Facebook</h1>
+                    <li class="date" data-date="Oct 18 - Jun 19">
+                        <h1>Logistics Solutions Group</h1>
                         <p>
-                            Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
-                            difficultas est nobis.
-                            Respice ... Sentio sicut
+                            Junior Software Developer | Business Analyst
                         </p>
                     </li>
-                    <li class="date" data-date="2002 - 2007">
-                        <h1>Microsoft</h1>
+                    <li class="date" data-date="Jun 06 - Apr 19">
+                        <h1>Dog Den Inc.</h1>
                         <p>
-                            Respice ... Sentio sicut ego vobis exponam: sed vias breve iterum conabor. Fugere hoc maior
-                            difficultas est nobis.
-                            Respice ... Sentio sicut
+                            General Manager
                         </p>
                     </li>
                 </ul>
@@ -253,7 +272,7 @@
                 <h1>Contact</h1>
                 <h6>Let's work together</h6>
             </div>
-            <form action="" data-aos="fade-up" data-aos-delay="300">
+            <form action="mailto:kylecox213@gmail.com" data-aos="fade-up" data-aos-delay="300">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" placeholder="Enter your name..." required>
                 <label for="email">Email:</label>
@@ -261,8 +280,8 @@
                 <label for="email">Services:</label>
                 <select name="services" id="service">
                     <option value="">Web Design</option>
-                    <option value="">Web Development</option>
-                    <option value="">Web Design/Development</option>
+                    <option value="">Software Development</option>
+                    <option value="">Databases</option>
                 </select>
                 <label for="subject">Subject:</label>
                 <textarea name="subject" id="subject" cols="10" rows="10"></textarea>
