minor  changes to index.html; enhanced functionality of hyperlinks and aos.js

--- a/index.html
+++ b/index.html
@@ -217,20 +217,24 @@
                     <a href="https://kylecox213.github.io/Number-Guess-Game/">
                         <img src="assets/images/randomnums.jpg" alt="Numbers"></a>
                 </div>
+                <div class="portfolio-img" data-aos="fade-left" data-aos-delay="1200">
+                        <a href="https://kylecox213.github.io/Trivia-Game/">
+                            <img src="assets/images/bbimg.jpg" alt="BreakingBad"></a>
+                    </div>
             </div>
 
             <div class="portfolio-item">
                 <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="1500">
-                    <img src="assets/images/gems.jpg" alt="">
+                    <img src="" alt="">
                 </div>
             </div>
             <div class="portfolio-description" data-aos="fade-left" data-aos-delay="1800">
                 <h6>Web Design</h6>
                 <h1>Product Sketch</h1>
                 <p>
-                    Product Sketch page is currently under construction!
+                    Product page and project designs
                 </p>
-                <a href="#" class="cta">View Details</a>
+                <a href="https://kylecox213.github.io/Bootstrap-Portfolio/" class="cta">View Details</a>
             </div>
         </div>
     </section>
