--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </ul>
         </nav>
         <div class="landing-text">
-            <h1>Kyle Cox
+            <h1>Kyle Alexander Cox
                 <h6>Software Developer | Web Developer | Business Analyst</h6>
             </h1>
         </div>
@@ -70,17 +70,17 @@
                     <ul class="nav-list">
                         <li>
                             <a target="blank" href="#" class="icon-link">
-                                <i class="fab fa-facebook-square"></i>
+                                <i class="fab fa-facebook-square" data-aos="flip-up" data-aos-delay="800"></i>
                             </a>
                             <a target="blank" href="https://www.linkedin.com/in/kyle-cox-812757113" class="icon-link">
-                                <i class="fab fa-linkedin"></i>
+                                <i class="fab fa-linkedin" data-aos="flip-up" data-aos-delay="800"></i>
                             </a>
                             <a target="blank" href="https://github.com/kylecox213" class="icon-link">
-                                <i class="fab fa-github-square"></i>
+                                <i class="fab fa-github-square" data-aos="flip-up" data-aos-delay="800"></i>
                             </a>
                             <a target="blank" href="https://1drv.ms/b/s!Ah7GvE7bTMpCgZw07oa8yzxpSOvVNg"
                                 class="icon-link">
-                                <i class="fa fa-file-pdf-o"></i>
+                                <i class="fa fa-file-pdf-o" data-aos="flip-up" data-aos-delay="800"></i>
                             </a>
                         </li>
                     </ul>
@@ -119,9 +119,11 @@
                     <div class="icon-container">
                         <i class="fas fa-chart-bar"></i>
                     </div>
-                    <h1>Database</h1>
+                    <h1>Web Applications</h1>
                     <p>
-                        Expanding the skills to utilize a variety of databases in accordance an application's needs
+                        Expanding the skills to utilize a plethora of platforms and tools to design, build and implement
+                        highly
+                        dynamic web applications
                     </p>
                 </div>
             </div>
@@ -134,109 +136,158 @@
                 <h1>Portfolio</h1>
                 <h6>View recent projects</h6>
             </div>
+
             <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="300">
+                <div class="portfolio-img img-float-left" data-aos="fade-right" data-aos-delay="300">
                     <a href="https://kylecox213.github.io/Nice-Bass/">
                         <img src="assets/images/bassapp.png" alt="bass"></a>
                 </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
-                    <a href="https://kylecox213.github.io/unit-4-game/">
-                        <img src="assets/images/crystalgame.png" alt="crystal"></a>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="300">
-                    <a href="https://kylecox213.github.io/Trivia-Game/">
-                        <img src="assets/images/triviagame.png" alt="trivia"></a>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
-                    <a href="https://kylecox213.github.io/GIPHY-API/?">
-                        <img src="assets/images/nintendoapp.png" alt="giph"></a>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="300">
-                    <a href="https://kylecox213.github.io/Psychic-Game/">
-                        <img src="assets/images/psygame (1).png" alt="psychic"></a>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
-                    <a href="https://kylecox213.github.io/Number-Guess-Game/">
-                        <img src="assets/images/numbergame.png" alt="number"></a>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="300">
-                    <a href="https://kylecox213.github.io/Train-Scheduler/">
-                        <img src="assets/images/traingame.png" alt="train"></a>
-                </div>
-            </div>
-            <div class="portfolio-description" data-aos="fade-left" data-aos-delay="600">
-                <h6>Software Development</h6>
-                <h1>COG Systems LLC</h1>
-                <p>
-                    COG Systems website is currently under construction!
-                </p>
-                <a href="#" class="cta">View Details</a>
-            </div>
-            <div class="portfolio-item">
-                <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="900">
-                    <h6>Web Design</h6>
-                    <h1>Product Layout</h1>
+                <div class="portfolio-description description-float-right" data-aos="fade-left" data-aos-delay="300">
+                    <h6>Web Applications</h6>
+                    <h1>Nice Bass</h1>
                     <p>
-                        Product page is currently under construction!
+                        Provides tournament-style bass fisherman the ability to take and upload photos of their latest
+                        catch while notifying other users of the weight and location of the catch. Users are also
+                        provided
+                        current cliamte and temperature, real-time inclement weather updates, interactive and dynamic
+                        weather
+                        radar layers, and geo-location tracking capabilities. Fish on!
                     </p>
-                    <a href="#" class="cta">View Details</a>
+                    <a href="https://github.com/kylecox213/Nice-Bass" class="cta">View Details</a>
                 </div>
-                <div class="portfolio-img" data-aos="fade-left" data-aos-delay="1200">
-                    <a href="https://kylecox213.github.io/Nice-Bass/">
-                        <img src="assets/images/bass.jpg" alt="Largemouth Bass"></a>
-                </div>
-                <div class="portfolio-img" data-aos="fade-right" data-aos-delay="1200">
-                    <a href="https://kylecox213.github.io/unit-4-game/">
-                        <img src="assets/images/gems.jpg" alt="RPG Game"></a>
-                </div>
-                <div class="portfolio-img" data-aos="fade-left" data-aos-delay="1200">
-                    <a href="https://kylecox213.github.io/GIPHY-API/?">
-                        <img src="assets/images/ninten.png" alt="Giphy API"></a>
-                </div>
-                <div class="portfolio-img" data-aos="fade-right" data-aos-delay="1200">
-                    <a href="https://kylecox213.github.io/Psychic-Game/">
-                        <img src="assets/images/goblinball.png" alt="Psychic Game"></a>
-                </div>
-                <div class="portfolio-img" data-aos="fade-left" data-aos-delay="1200">
-                    <a href="https://kylecox213.github.io/Train-Scheduler/">
-                        <img src="assets/images/badtrain.jpg" alt="Train"></a>
-                </div>
-                <div class="portfolio-img" data-aos="fade-right" data-aos-delay="1200">
-                    <a href="https://kylecox213.github.io/Number-Guess-Game/">
-                        <img src="assets/images/randomnums.jpg" alt="Numbers"></a>
-                </div>
-                <div class="portfolio-img" data-aos="fade-left" data-aos-delay="1200">
-                        <a href="https://kylecox213.github.io/Trivia-Game/">
-                            <img src="assets/images/bbimg.jpg" alt="BreakingBad"></a>
-                    </div>
             </div>
 
             <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="1500">
-                    <img src="" alt="">
+                <div class="portfolio-description description-float-left" data-aos="fade-right" data-aos-delay="300">
+                    <h6>Web Applications</h6>
+                    <h1>Crystal Collector</h1>
+                    <p>
+                        Four crystals! Each crystal has a value. In this game, it is up to you to figure out what they
+                        are worth.
+                        But don't let the sum of the crystal's values exceed the number above or....GAME OVER
+                    </p>
+                    <a href="https://github.com/kylecox213/unit-4-game" class="cta">View Details</a>
+                </div>
+                <div class="portfolio-img img-float-right" data-aos="fade-left" data-aos-delay="300">
+                    <a href="https://kylecox213.github.io/unit-4-game/">
+                        <img src="assets/images/crystalgame.png" alt="crystal" style="float: right"></a>
                 </div>
             </div>
-            <div class="portfolio-description" data-aos="fade-left" data-aos-delay="1800">
-                <h6>Web Design</h6>
-                <h1>Product Sketch</h1>
-                <p>
-                    Product page and project designs
-                </p>
-                <a href="https://kylecox213.github.io/Bootstrap-Portfolio/" class="cta">View Details</a>
+
+            <div class="portfolio-item">
+                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
+                    <a href="https://kylecox213.github.io/Trivia-Game/">
+                        <img src="assets/images/triviagame.png" alt="trivia"></a>
+                </div>
+                <div class="portfolio-description description-float-left" data-aos="fade-left" data-aos-delay="300">
+                    <h6>Web Applications</h6>
+                    <h1>Trivia Game</h1>
+                    <p>
+                        A Breaking Bad Trivia Game! There are ten, time-sensitive questions that are not easy to answer.
+                        Only true fanatics of the show will be able to pass.
+                    </p>
+                    <a href="https://github.com/kylecox213/Trivia-Game" class="cta">View Details</a>
+                </div>
             </div>
-        </div>
+            <div class="portfolio-item">
+                <div class="portfolio-description description-float-left" data-aos="fade-right" data-aos-delay="300">
+                    <h6>Web Applications</h6>
+                    <h1>Nintendo Giphy</h1>
+                    <p>
+                        An application that brings the user a series of nintendo related giphs rendered on the page.
+                        Simply
+                        enter a game title and.....viola!
+                    </p>
+                    <a href="https://github.com/kylecox213/GIPHY-API" class="cta">View Details</a>
+                </div>
+                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="300">
+                    <a href="https://kylecox213.github.io/GIPHY-API/?">
+                        <img src="assets/images/nintendoapp.png" alt="giph" style="float: right"></a>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
+                    <a href="https://kylecox213.github.io/Psychic-Game/">
+                        <img src="assets/images/psygame (1).png" alt="psychic"></a>
+                </div>
+                <div class="portfolio-description description-float-left" data-aos="fade-left" data-aos-delay="300">
+                    <h6>Web Applications</h6>
+                    <h1>Psychic Game</h1>
+                    <p>
+                        The computer guesses a letter. You don't know what it is. In this fun game, you have ten chances
+                        to
+                        get it right. If your guesses run out....Guess What? GAMEOVER!
+                    </p>
+                    <a href="https://github.com/kylecox213/Psychic-Game" class="cta">View Details</a>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-description description-float-left" data-aos="fade-right" data-aos-delay="300">
+                    <h6>Web Applications</h6>
+                    <h1>Guess A Number</h1>
+                    <p>
+                        Guess a number! Any number! Any number between one through thirty! You have seven shots to get
+                        it in this
+                        game.
+                    </p>
+                    <a href="https://github.com/kylecox213/Number-Guess-Game" class="cta">View Details</a>
+                </div>
+                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="300">
+                    <a href="https://kylecox213.github.io/Number-Guess-Game/">
+                        <img src="assets/images/numbergame.png" alt="number" style="float: right"></a>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
+                    <a href="https://kylecox213.github.io/Train-Scheduler/">
+                        <img src="assets/images/traingame.png" alt="train"></a>
+                </div>
+                <div class="portfolio-description" data-aos="fade-left" data-aos-delay="300">
+                    <h6>Web Applications</h6>
+                    <h1>Train Schedule Management System (TSMS)</h1>
+                    <p>
+                        A web form application designed to manage the time schedule of each train entered into the
+                        management system.
+                        (TSMS) provides users with the ability to add a new train and set the train schedule properties.
+                        For each
+                        train entered into the system, (TSMS) is designed to update the next scheduled arrival and
+                        display
+                        the minutes remaining until the next arrival.
+                    </p>
+                    <a href="https://github.com/kylecox213/Train-Scheduler" class="cta">View Details</a>
+                </div>
+            </div>
+
+            <br>
+
+            <div class="portfolio-item">
+                <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="300">
+                    <h6>Web Design</h6>
+                    <h1>Product Layout</h1>
+                    <p>
+                        The initial student-portfolio webpage design. The webpage design utilized wireframing schemes and
+                        various bootstrap classes and styling properties.
+                    </p>
+                    <a href="https://github.com/kylecox213/Bootstrap-Portfolio" class="cta">View Details</a>
+                </div>
+                <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="300">
+                    <a href="https://kylecox213.github.io/Bootstrap-Portfolio/">
+                        <img src="assets/images/bootstrap.png" alt="bootstrap" style="float: right"></a>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
+                    <img src="assets/images/gearscog.jpg" alt="gears">
+                </div>
+                <div class="portfolio-description" data-aos="fade-left" data-aos-delay="600">
+                    <h6>Software Development</h6>
+                    <h1>COG Systems LLC.</h1>
+                    <p>
+                        Product design page is currently under construction!
+                    </p>
+                    <a href="" class="cta">View Details</a>
+                </div>
+            </div>
     </section>
 
     <section class="experience" id="experience">
