--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en-us">
 
@@ -10,6 +9,8 @@
     <link rel=“stylesheet” href=“https://use.fontawesome.com/releases/v5.7.2/css/all.css”
         integrity=“sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr” crossorigin=“anonymous”>
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/javascript/External Libraries/tagcanvas.min.js" type="text/javascript"></script>
+
 </head>
 
 <body>
@@ -46,12 +47,40 @@
                 <h6>Software Developer | Web Developer | Business Analyst</h6>
             </h1>
         </div>
+        <div id="myCanvasContainer">
+            <canvas width="700" height="700" id="myCanvas">
+                <p>Anything in here will be replaced on browsers that support the canvas element</p>
+                <ul>
+                    <li><a href="">HTML 5</a></li>
+                    <li><a href="">CSS</a></li>
+                    <li><a href="">Javascript</a></li>
+                    <li><a href="">jQuery</a></li>
+                    <li><a href="">Firebase</a></li>
+                    <li><a href="">SQL</a></li>
+                    <li><a href="">mySQL</a></li>
+                    <li><a href="">PHP</a></li>
+                    <li><a href="">ASP.NET</a></li>
+                    <li><a href="">C#</a></li>
+                    <li><a href="">node.js</a></li>
+                    <li><a href="">Bootstrap</a></li>
+                    <li><a href="">Visio</a></li>
+                    <li><a href="">Visual Studio</a></li>
+                    <li><a href="">Office 365</a></li>
+                    <li><a href="">Powershell</a></li>
+                    <li><a href="">Git</a></li>
+                    <li><a href="">npm</a></li>
+                    <li><a href="">JSON</a></li>
+                    <li><a href="">AJAX</a></li>
+                    <li><a href="">XML</a></li>
+                </ul>
+            </canvas>
+        </div>
     </header>
 
     <section class="about" id="about">
         <div class="container">
             <div class="profile-img" data-aos="fade-right" data-aos-delay="300">
-                <img src="assets/images/profile2.jpg" alt="profile">
+                <img src="assets/images/bassy.jpg" alt="profile">
             </div>
             <div class="about-details" data-aos="fade-left" data-aos-delay="600">
                 <div class="about-heading">
@@ -266,7 +295,8 @@
                     <h6>Web Design</h6>
                     <h1>Product Layout</h1>
                     <p>
-                        The initial student-portfolio webpage design. The webpage design utilized wireframing schemes and
+                        The initial student-portfolio webpage design. The webpage design utilized wireframing schemes
+                        and
                         various bootstrap classes and styling properties.
                     </p>
                     <a href="https://github.com/kylecox213/Bootstrap-Portfolio" class="cta">View Details</a>
